--- a/code/config.conf
+++ b/code/config.conf
@@ -4,31 +4,35 @@ model_name                  = klue/bert-base
 ; output directory
 output_dir                  = ./results
 ; number of total save model.
-save_total_limit            = 5      
+save_total_limit            = 5
 ; model saving step.     
 save_steps                  = 500
 ; total number of training epochs
 num_train_epochs            = 5
 ; learning_rate
-learning_rate               = 5e-5         
-; batch size per device during training    
-per_device_train_batch_size = 16           
+learning_rate               = 5e-5
+; batch size per device during training
+per_device_train_batch_size = 16
 ; batch size for evaluation
-per_device_eval_batch_size  = 16           
+per_device_eval_batch_size  = 16
 ; number of warmup steps for learning rate scheduler
-warmup_steps                = 100             
+warmup_steps                = 100
 ; strength of weight decay
-weight_decay                = 0.01              
+weight_decay                = 0.01
 ; directory for storing logs
-logging_dir                 = ./logs        
+logging_dir                 = ./logs
 ; log saving step.  
-logging_steps               = 100       
+logging_steps               = 100
 ; evaluation strategy to adopt during training
     ; `no`: No evaluation during training.
     ; `steps`: Evaluate every `eval_steps`.
-    ; `epoch`: Evaluate every end of epoch.       
+    ; `epoch`: Evaluate every end of epoch.
 evaluation_strategy         = steps
 ; evaluation step.     
 eval_steps                  = 500
 ; load best model at the end. 
 load_best_model_at_end      = yes
+; use 16-bit (mixed) precision to increase speed
+fp16                        = yes
+; use gradient checkpointing to reduce memory usage
+gradient_checkpointing      = yes
