[Feature][Data] Modularization of Preprocessing And Add Duplicate Preprocessing
- Add preprocessing.py
- Edit preprocessing_dataset in load_data.py
- Add preprocessing config in config.conf

--- a/code/config.conf
+++ b/code/config.conf
@@ -32,3 +32,6 @@ evaluation_strategy         = steps
 eval_steps                  = 500
 ; load best model at the end. 
 load_best_model_at_end      = yes
+
+[preprocessing]
+use_clean_duplicate = True
