[Feature][config] Add inference options in argument and config
- Add saved_model_path, tokenizer_name and more options in argument.
- Add inference options in config.conf.

--- a/code/config.conf
+++ b/code/config.conf
@@ -36,3 +36,11 @@ load_best_model_at_end      = yes
 fp16                        = yes
 ; use gradient checkpointing to reduce memory usage
 gradient_checkpointing      = yes
+
+[inference]
+; tokenizer name
+tokenizer_name                  = klue/roberta-large
+; saved model path
+saved_model_path                = ./best_model
+; output result file path
+output_path                     = ./prediction/submission.csv
