[Feature][config] Add and organize config options - Organize config options. - Add scheduler and dataset options in config parser.

--- a/code/config.conf
+++ b/code/config.conf
@@ -1,6 +1,20 @@
-[train]
+[model]
 ; Model name from huggingface
 model_name                  = klue/bert-base
+
+[model.scheduler]
+scheduler   = CosineAnnealingWarmUpRestarts
+T_0         = 1000
+T_mult      = 2
+eta_max     = 3e-5
+T_up        = 500
+gamma       = 0.5
+
+[dataset]
+tokenizing_type         = type_entity_marker_punct
+added_special_tokens    = ['[SE]', '[/SE]', '[OE]', '[/OE]']
+
+[train]
 ; output directory
 output_dir                  = ./results
 ; number of total save model.
