[Fix][config] Fix to work boolean types. - Change to python style boolean. - Call values with function "getboolean".

--- a/code/config.conf
+++ b/code/config.conf
@@ -45,11 +45,11 @@ evaluation_strategy         = steps
 ; evaluation step.     
 eval_steps                  = 500
 ; load best model at the end. 
-load_best_model_at_end      = yes
+load_best_model_at_end      = True
 ; use 16-bit (mixed) precision to increase speed
-fp16                        = yes
+fp16                        = True
 ; use gradient checkpointing to reduce memory usage
-gradient_checkpointing      = yes
+gradient_checkpointing      = True
 
 [inference]
 ; tokenizer name
