--- a/code/config.conf
+++ b/code/config.conf
@@ -35,3 +35,8 @@ load_best_model_at_end      = yes
 
 [preprocessing]
 use_clean_duplicate = True
+
+[sweep]
+run_sweep                   = False
+sweep_path                  = ./sweep.json
+sweep_count                 = 5
