[Feature][log] Add base of sweep

--- a/code/config.conf
+++ b/code/config.conf
@@ -37,6 +37,6 @@ load_best_model_at_end      = yes
 use_clean_duplicate = True
 
 [sweep]
-run_sweep                   = False
+run_sweep                   = True
 sweep_path                  = ./sweep.json
 sweep_count                 = 5
