[Feature][log] Add wandb logging and sweep
- Modify training code to compatible with sweep and legacy codes.
- Make "sweep.json" to controll sweep works.
- Add gitignore directory.

--- a/.gitignore
+++ b/.gitignore
@@ -368,8 +368,9 @@ $RECYCLE.BIN/
 
 # Project train and result files. 
 dataset
-code/results
-code/prediction
+code/results/*
+code/prediction/*
+code/best_model
 
 # wandb
 wandb
