[Fix] Fix Load Token Bugs - Fix Load Tokens from config.conf Bugs

--- a/code/config.conf
+++ b/code/config.conf
@@ -13,8 +13,8 @@ gamma       = 0.5
 [dataset]
 tokenizing_type         = type_entity_marker_punct
 added_special_tokens    = ['[SE]', '[/SE]', '[OE]', '[/OE]']
-subj_token 				= "@"
-obj_token				= "#"
+subj_token 				= @
+obj_token				= #
 
 [train]
 ; output directory
